--- a/Nabto_HeatPumpApp_SwiftUI/Podfile
+++ b/Nabto_HeatPumpApp_SwiftUI/Podfile
@@ -1,5 +1,5 @@
 
-platform :ios, '12.0'
+platform :ios, '13.0'
 
  use_frameworks!
 
@@ -8,6 +8,7 @@ target 'Nabto_HeatPumpApp_SwiftUI' do
 
   pod 'NabtoEdgeClientSwift'
   pod 'CBOR', '~> 0.2'
+  pod 'AlertToast'
 
 
 
